[workspace]
members = [".", "ellidri-tokens", "ellidri-unicase"]


[package]
name = "ellidri"
version = "3.0.0"
authors = ["Hubert Hirtz <hubert@hirtz.pm>"]
edition = "2021"
description = "Your kawaii IRC server"
homepage = "https://sr.ht/~taiite/ellidri"
repository = "https://git.sr.ht/~taiite/ellidri"
readme = "README.md"
keywords = ["irc"]
categories = ["network-programming"]
license = "ISC"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
all-features = true


[features]
default = []
tls = ["tokio-rustls"]


[dependencies]

# Async runtime
slab = { version = "0.4" }
tokio = { version = "1", features = ["full", "parking_lot"] }

# TLS
tokio-rustls = { version = "0.23",optional = true }

# Case-insensitive HashMap.
# Separated from the main crate because it contains unsafe code.
ellidri-unicase = { version = "2.1.0", path = "ellidri-unicase" }

# IRC parsing
ellidri-tokens = { version = "0.1.0", path = "ellidri-tokens" }

# Logging
env_logger = { version = "0.10"}
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }

# Configuration
gethostname = { version = "0.4"}
# Time string generation (@time message tag and RPL_TIME reply)
humantime = { version = "2"}

# msgid tag generation
base64 = { version = "0.13", default-features = false, features = ["std"] }
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
anyhow = "1"
clap = "4"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.9"
argon2 = "0.4.1"
rpassword = "7.2.0"
rand = "0.8"
rand_core = "0.6"
[dev-dependencies]
criterion = "0.4.0"
